# Render

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
src/: build-setup.txt  main.cpp  main.h
